FIX: google fonts issue and bootstrap link that was missing in index.js that meant things were not aligning. Added Post component which is how I quickly fixed these font and alignment issues.

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,5 +1,5 @@
 .App {
-    font-family: "DM Sans", sans-serif;
+  font-family: 'ADLaM Display', cursive;
     background-color: #f8f8f8;
     min-height: 100vh;
   }
