--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -1,38 +1,12 @@
-.App {
-    font-family: 'ADLaM Display', cursive;
-    background-color: #f8f8f8;
-    min-height: 100vh;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  a {
-    color: #000000;
-    transition: color ease-in-out 0.3s;
-    padding: 7px;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: none;
-  }
-  
-  a:hover i {
-    color: 3d6bff;
-    transition: color ease-in-out 0.3s;
-  }
-  
-  i {
-    color: #000000;
-    font-size: 1.6rem;
-    padding: 7px;
-    vertical-align: middle;
-  }
-  
-  i:hover {
-    cursor: pointer;
-    transition: color ease-in-out 0.2s;
-    color: #3d6bff;
-  }
+.NavBar {
+  background-color: #ffffff;
+  border: 1px solid #dadadf;
+}
+
+.NavLink {
+  padding: 5px;
+}
+
+.Active i {
+  color: #2142b2;
+}
